@@ -5,17 +5,100 @@
     <parent>
         <artifactId>secure-token-service</artifactId>
         <groupId>de.adorsys.sts</groupId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.0</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
+
+    <modelVersion>4.0.0</modelVersion>
     <artifactId>sts-secret-server</artifactId>
 
+
     <dependencies>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>3.1.2</version>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-commons -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+
+        <!--        TEST dependencies-->
+
+        <dependency>
+            <groupId>com.github.dasniko</groupId>
+            <artifactId>testcontainers-keycloak</artifactId>
+            <version>2.5.0</version>
+            <scope>test</scope>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>1.16.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>1.16.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>1.18.3</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>5.3.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core -->
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.2.3.Final</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
+<!--        <dependency>-->
+<!--            <groupId>org.hibernate.validator</groupId>-->
+<!--            <artifactId>hibernate-validator</artifactId>-->
+<!--            <version>8.0.0.Final</version>-->
+<!--        </dependency>-->
+
+        <!--        STS     -->
 
         <dependency>
             <groupId>de.adorsys.sts</groupId>
@@ -34,14 +117,21 @@
             <artifactId>sts-persistence-mongo</artifactId>
         </dependency>
 
+        <!--        ShedLock    -->
+
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
+            <groupId>net.javacrumbs.shedlock</groupId>
+            <artifactId>shedlock-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
+            <groupId>net.javacrumbs.shedlock</groupId>
+            <artifactId>shedlock-provider-jdbc-template</artifactId>
         </dependency>
+        <dependency>
+            <groupId>net.javacrumbs.shedlock</groupId>
+            <artifactId>shedlock-provider-mongo</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -49,18 +139,13 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>com.nitorcreations</groupId>
-            <artifactId>junit-runners</artifactId>
-        </dependency>
+
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
         </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>
+
+
         <dependency>
             <groupId>eu.codearte.catch-exception</groupId>
             <artifactId>catch-exception</artifactId>
@@ -74,8 +159,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <!--https://stackoverflow.com/questions/49363222/maven-failsafe-plugin-surefirebooterforkexception-there-was-an-error-in-the-f-->
-                <version>2.18.1</version>
+                <version>2.22.0</version>
                 <configuration>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                     <includes>
                         <include>**/*IT.java</include>
                     </includes>
@@ -105,136 +191,6 @@
                         <goals>
                             <goal>repackage</goal>
                         </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>io.fabric8</groupId>
-                <artifactId>docker-maven-plugin</artifactId>
-                <configuration>
-                    <images>
-                        <image>
-                            <alias>it-keycloak</alias>
-                            <name>jboss/keycloak:${keycloak.version}</name>
-
-                            <run>
-                                <env>
-                                    <KEYCLOAK_PASSWORD>admin123</KEYCLOAK_PASSWORD>
-                                    <KEYCLOAK_USER>admin</KEYCLOAK_USER>
-                                    <KEYCLOAK_LOGLEVEL>ERROR</KEYCLOAK_LOGLEVEL>
-                                </env>
-                                <cmd>
-                                    <exec>
-                                        <arg>-b</arg>
-                                        <arg>0.0.0.0</arg>
-                                        <arg>--debug</arg>
-                                    </exec>
-                                </cmd>
-                                <ports>
-                                    <port>+docker.host.ip:docker.port:8080</port>
-                                </ports>
-                                <wait>
-                                    <http>
-                                        <url>http://${docker.host.ip}:${docker.port}/auth/</url>
-                                        <status>200</status>
-                                    </http>
-                                    <time>120000</time>
-                                </wait>
-                            </run>
-                        </image>
-
-                        <image>
-                            <alias>it-keycloak-import</alias>
-                            <name>adorsys/keycloak-config-cli:${keycloak-config-cli.version}-${keycloak.version}</name>
-
-                            <run>
-                                <env>
-                                    <KEYCLOAK_URL>http://keycloak:8080</KEYCLOAK_URL>
-                                    <KEYCLOAK_ADMIN>admin</KEYCLOAK_ADMIN>
-                                    <KEYCLOAK_ADMIN_PASSWORD>admin123</KEYCLOAK_ADMIN_PASSWORD>
-                                    <WAIT_TIME_IN_SECONDS>300</WAIT_TIME_IN_SECONDS>
-                                    <SPRING_PROFILES_INCLUDE>debug</SPRING_PROFILES_INCLUDE>
-                                </env>
-                                <volumes>
-                                    <bind>
-                                        <volume>./src/test/docker:/tmp/keycloak-config-cli/configs</volume>
-                                    </bind>
-                                </volumes>
-                                <links>
-                                    <link>it-keycloak:keycloak</link>
-                                </links>
-                                <cmd>config-cli</cmd>
-                            </run>
-                        </image>
-                    </images>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>cleanup-stop-keycloak</id>
-                        <phase>pre-integration-test</phase>
-                        <goals>
-                            <goal>stop</goal>
-                        </goals>
-                        <configuration>
-                            <allContainers>true</allContainers>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>cleanup-remove-keycloak</id>
-                        <phase>pre-integration-test</phase>
-                        <goals>
-                            <goal>remove</goal>
-                        </goals>
-                        <configuration>
-                            <removeMode>all</removeMode>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>build-keycloak</id>
-                        <phase>pre-integration-test</phase>
-                        <goals>
-                            <goal>build</goal>
-                        </goals>
-                        <configuration>
-                            <buildArgs.keycloak.version>${keycloak.version}</buildArgs.keycloak.version>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>prepare-keycloak</id>
-                        <phase>pre-integration-test</phase>
-                        <goals>
-                            <goal>start</goal>
-                        </goals>
-                        <configuration>
-                            <images>
-                                <image>
-                                    <alias>it-keycloak</alias>
-                                </image>
-                                <image>
-                                    <alias>it-keycloak-import</alias>
-                                </image>
-                            </images>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>stop-keycloak</id>
-                        <phase>post-integration-test</phase>
-                        <goals>
-                            <goal>stop</goal>
-                        </goals>
-                        <configuration>
-                            <allContainers>true</allContainers>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>remove-keycloak</id>
-                        <phase>post-integration-test</phase>
-                        <goals>
-                            <goal>remove</goal>
-                        </goals>
-                        <configuration>
-                            <removeMode>all</removeMode>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
